it doesnt working

--- a/.env.bstack
+++ b/.env.bstack
@@ -1,3 +1,5 @@
 APP_ID='bs://1b16a47c6fb7274e97f6ec4365df6d2daf858f4d'
 REMOTE_URL='http://hub.browserstack.com/wd/hub'
 DEVICE_NAME='Google Pixel 3'
+USER_NAME='klim_0YKy6j'
+ACCESS_KEY='ijczddUv81x2mjaeqgj8'
