with literal and .env

--- a/.env.bstack
+++ b/.env.bstack
@@ -1,5 +1,10 @@
-APP_ID='bs://1b16a47c6fb7274e97f6ec4365df6d2daf858f4d'
+APP_ID1='bs://1b16a47c6fb7274e97f6ec4365df6d2daf858f4d'
+APP='bs://sample.app'
+
 REMOTE_URL='http://hub.browserstack.com/wd/hub'
 DEVICE_NAME='Google Pixel 3'
-USER_NAME='klim_0YKy6j'
-ACCESS_KEY='ijczddUv81x2mjaeqgj8'
+USER_NAME='romin_J06lE3'
+ACCESS_KEY='zLe5GpdQ9fNZ61RaPYe1'
+
+PLATFORM_NAME= "android",
+PLATFORM_VERSION="9.0",
