--- a/.env.bstack
+++ b/.env.bstack
@@ -1,10 +1,9 @@
-APP_ID1='bs://1b16a47c6fb7274e97f6ec4365df6d2daf858f4d'
-APP='bs://sample.app'
+APP='bs://706a0fa1bf7642b11352eabeeea9295f5cbf0df3'
 
 REMOTE_URL='http://hub.browserstack.com/wd/hub'
 DEVICE_NAME='Google Pixel 3'
-USER_NAME='romin_J06lE3'
-ACCESS_KEY='zLe5GpdQ9fNZ61RaPYe1'
+USER_NAME='potokoy_ENUhuM'
+ACCESS_KEY='yfzXcDeR2yWozKsESCoM'
 
 PLATFORM_NAME= "android",
 PLATFORM_VERSION="9.0",
